# booth

./: .gitignore  Cargo.toml  README.md  client_secret.json  credentials.json  io.github.seadve.Booth.json  meson.build  token_cache.json
.github/workflows/: ci.yml
booth-main/src/: application.py  camera.py  main.py  spreadsheet.py  utils.py
booth-main/src/devices/display/: __init__.py
booth_main/: booth.sh  token_cache.json
booth_main/src/: application.py  camera.py  spreadsheet.py
booth_main/src/devices/: display.py
generate_qr_code/: main.py  sample_data.xlsx
generate_qr_code_web/: app.js  index.html
src/: application.py  application.rs  camera.py  camera.rs  main.py  main.rs  meson.build  person.py  person.rs  spreadsheet.py  spreadsheet.rs  utils.rs
src/devices/: relay.py  test.py
src/devices/display/: __init__.py
src/nameable/: mod.rs
src/sensors/: driver.py  proximity.py  temperature.py  test.py
uvled/: uvled.ino
