[package]
name = "booth"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"

once_cell = "1.5"
anyhow = "1.0.44"

glib = "0.14.8"
gio = "0.14.8"
gst = { version = "0.17.4", package = "gstreamer" }

chrono = { version = "0.4", features = ["serde"] }
futures-channel = "0.3.17"

serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
